axum-enumroutes/tests/ui/fail_route_attr_unknown_arg.stderr
error: unknown argument `foobar`
  --> tests/ui/fail_route_attr_unknown_arg.rs:13:36
   |
13 |     #[get("/", handler = _handler, foobar = 1)]
   |                                    ^^^^^^
